chore: Cleaning up written Thesis

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -27,6 +27,16 @@
   month     = {Aug}
 } 
 
+# DIDComm
+ @misc{curren_looker_terbu_2020,
+  title     = {Didcomm Messaging},
+  url       = {https://identity.foundation/didcomm-messaging/spec},
+  journal   = {DIDComm Messaging Specification},
+  publisher = {DIF},
+  year      = {2020},
+  month     = {May}
+} 
+
 # ActivityPub
  @misc{lemmer-webber_tallon_guy_prodromou_2018,
   title     = {1.1 Social Web Working Group},
@@ -38,7 +48,7 @@
   month     = {Jan}
 } 
 
-#Web of Trust (Other approach)
+#Web of Trust (activitypub-decentralized-distributed)
  @misc{webber_sporny_2017,
   title     = {ActivityPub: From decentralized to distributed social networks},
   url       = {https://github.com/WebOfTrustInfo/rwot5-boston/blob/fcbc33835c1b76b7526a8a82cd9cac9c23828711/final-documents/activitypub-decentralized-distributed.pdf},
@@ -47,4 +57,79 @@
   author    = {Webber, Christopher and Sporny, Manu},
   year      = {2017},
   month     = {Dec}
+} 
+
+# Activity Streams
+ @misc{snell_prodromou_2017,
+  title     = {Activity streams 2.0},
+  url       = {https://www.w3.org/TR/activitystreams-core/},
+  journal   = {Activity Streams 2.0},
+  publisher = {W3C},
+  year      = {2017},
+  month     = {May}
+} 
+
+# Interview with Gargon
+ @misc{tilley_2018,
+  title     = {One mammoth of a job: An interview with Eugen Rochko of mastodon},
+  url       = {https://medium.com/we-distribute/one-mammoth-of-a-job-an-interview-with-eugen-rochko-of-mastodon-23b159d6796a},
+  journal   = {Medium},
+  publisher = {We Distribute},
+  author    = {Tilley, Sean},
+  year      = {2018},
+  month     = {Jul}
+} 
+
+# Fediverse
+ @misc{holloway_2018,
+  title     = {What on Earth is the FEDIVERSE and why does it matter?},
+  url       = {https://newatlas.com/what-is-the-fediverse/56385/},
+  journal   = {New Atlas},
+  publisher = {New Atas},
+  author    = {Holloway, James},
+  year      = {2018},
+  month     = {Oct}
+} 
+
+#Webhost Metadata
+ @misc{cook_2011,
+  title   = {RFC 6415 - web host metadata},
+  url     = {https://datatracker.ietf.org/doc/html/rfc6415},
+  journal = {Document search and retrieval page},
+  author  = {Cook, B.},
+  editor  = {Hammer-Lahav, E.Editor},
+  year    = {2011},
+  month   = {Oct}
+} 
+
+# Well-known Endpoints
+ @misc{nottingham_2019,
+  title     = {RFC 8615 - well-known Uniform Resource Identifiers (uris)},
+  url       = {https://datatracker.ietf.org/doc/html/rfc8615},
+  journal   = {Internet Engineering Task Force (IETF)},
+  publisher = {IETF},
+  author    = {Nottingham, M.},
+  year      = {2019},
+  month     = {May}
+} 
+
+# RFC Webfinger
+ @misc{jones_salgueiro_jones_smarr_2013,
+  title   = {RFC 7033 - webfinger},
+  url     = {https://datatracker.ietf.org/doc/html/rfc7033},
+  journal = {Internet Engineering Task Force (IETF)},
+  author  = {Jones, P. and Salgueiro, G. and Jones, M. and Smarr, J.},
+  year    = {2013},
+  month   = {Sep}
+} 
+
+#docs Mastodon Webfinger
+ @misc{rochko_2020,
+  title     = {Webfinger},
+  url       = {https://docs.joinmastodon.org/spec/webfinger/},
+  journal   = {Mastodon},
+  publisher = {Mastodon},
+  author    = {Rochko, Eugen},
+  year      = {2020},
+  month     = {Jan}
 } 
