--- a/Thesis/content/00_frontpages/00_frontpage.tex
+++ b/Thesis/content/00_frontpages/00_frontpage.tex
@@ -16,7 +16,7 @@
 		\large
 		by\\
 		\vspace{0.8cm}
-		\textbf{Adrian Isaias Sanchez Figueroa}\\
+		\textbf{Adrián Isaías Sánchez Figueroa}\\
 		\vspace{0.8cm}
 		\textbf{Matriculation Number 397327}\\
 		\vspace{2cm}
@@ -27,7 +27,7 @@
 		Department of Telecommunication Systems\\
 		Service-centric Networking\\
 		\vspace{0.5cm}
-		Bachelor's Thesis\\
+		Master's Thesis\\
 		\vspace{2.2cm}
 		\today\\
 		\vspace{2.0cm}
