--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -3,44 +3,44 @@
 
 This section gives an introduction into the general field in which you are writing your thesis. It further describes the situation today, and the problems that are solved and not.
  
-One of the most accepted and used definitions of OSN services was given by Boyd and Ellison in [11], who defined a Social Network Site (SNS) as a web based service that allows ”[...] individuals to
+One of the most accepted and used definitions of OSN services was given by Boyd and Ellison in, who defined a Social Network Site  as a web based service that allows individuals to
 
 \section{Motivation}
 Why choose this topic? Because identities are important.
-Web3 brings decentralization, and identities should stay behind. W3C provides us with new standards for interoperability, and we should take this goals in mind. 
- 
+Web3 brings decentralization, and identities should stay behind. W3C provides us with new standards for interoperability, and we should take this goals in mind. \cite{FakePaper11}
+
  
 \section{Digital Identities}
-The evolution of the digital identity 
+% The evolution of the digital identity 
  
-Almost every person who uses computers or accesses the Internet today has some form of digital identity. 
-% [https://www.cloudflare.com/learning/access-management/what-is-identity/ ]
- 
- 
-An Identity is, at its most basic level, a collection of claims about a person, place or thing. These claims are issued by centralized entities and then stored in centralized databases. Physical forms of identification have many downsides. For instance, they are not widely available to every human. According to the ID4D Initiative [https://id4d.worldbank.org/global-dataset ], around 1.1 billion people worldwide do not have a way to claim ownership of their identity, leaving them incapable to perform actions where identity uniqueness is important. For example voting in elections, accessing financial systems or governmental services. 
- 
-Identities are integral to a functioning society and economy. Being able to identify ourselves and our possessions enable us to create thriving societies and global markets. 
-% [https://consensys.net/blockchain-use-cases/digital-identity/ ] 
+% Almost every person who uses computers or accesses the Internet today has some form of digital identity. 
+% % [https://www.cloudflare.com/learning/access-management/what-is-identity/ ]
  
  
-Historically, identity management has never been User-centric. The user has always had to give control of its own identity. 
-How many times have we created an account to use a service online? Right now my password manager, for which I have to pay, has a count of 464 different log in details. 
+% An Identity is, at its most basic level, a collection of claims about a person, place or thing. These claims are issued by centralized entities and then stored in centralized databases. Physical forms of identification have many downsides. For instance, they are not widely available to every human. According to the ID4D Initiative [https://id4d.worldbank.org/global-dataset ], around 1.1 billion people worldwide do not have a way to claim ownership of their identity, leaving them incapable to perform actions where identity uniqueness is important. For example voting in elections, accessing financial systems or governmental services. 
  
-Identity management comprises a series of different processes to identity, authenticate and authorize users to access systems or services. 
+% Identities are integral to a functioning society and economy. Being able to identify ourselves and our possessions enable us to create thriving societies and global markets. 
+% % [https://consensys.net/blockchain-use-cases/digital-identity/ ] 
  
-Human or object identities are stored in multiple centralised or federated systems such as government, ERP, IoT,
-or manufacturing systems. From the standpoint of cryptographic trust verifcation, each of these centralised
-authorities serves as its own root of trust.
-An entity trailing along a value chain is interacting with multiple systems. Consequently, a new actor in any given value chain has no method to independently verify credentials of a human or attributes of either a physical object or data item (provenance, audit trail). This results in the existence of complex validation, quality inspection, and paper trail processes, and enormous hidden trust overhead costs are added to all value chains and services (DID for everything).
  
-Identity Management
+% Historically, identity management has never been User-centric. The user has always had to give control of its own identity. 
+% How many times have we created an account to use a service online? Right now my password manager, for which I have to pay, has a count of 464 different log in details. 
+ 
+% Identity management comprises a series of different processes to identity, authenticate and authorize users to access systems or services. 
+ 
+% Human or object identities are stored in multiple centralised or federated systems such as government, ERP, IoT,
+% or manufacturing systems. From the standpoint of cryptographic trust verifcation, each of these centralised
+% authorities serves as its own root of trust.
+% An entity trailing along a value chain is interacting with multiple systems. Consequently, a new actor in any given value chain has no method to independently verify credentials of a human or attributes of either a physical object or data item (provenance, audit trail). This results in the existence of complex validation, quality inspection, and paper trail processes, and enormous hidden trust overhead costs are added to all value chains and services (DID for everything).
+ 
+\section{Identity Management}
 Identity management, sometimes called identity and access management, is composed of all the different ways to identify, authenticate and authorize someone to access systems or services within an organization or associated organizations. 
 
 There are several problems with our current identity management systems:
 
-A paper-based identification such as a passport, birth certificate or driver’s license is easy to lose, copy or be lost to theft.
+A paper-based identification such as a passport, birth certificate or driver's license is easy to lose, copy or be lost to theft.
 The bureaucracy behind this type of identity management is typically slow and hard to organize.
-The current identity and access management systems are storing your data on a centralized server along with everybody else’s. This puts your digital property in danger as centralized systems are huge targets for hackers.
+The current identity and access management systems are storing your data on a centralized server along with everybody else's. This puts your digital property in danger as centralized systems are huge targets for hackers.
 Since 2019 alone, over 16 billion records have been leaked due to hacks and data breaches. This includes credit card numbers, addresses, phone numbers and other highly sensitive personal data.
 Current identities are not easily portable or verifiable.
 Blockchain identity management solves these issues. 
@@ -52,7 +52,7 @@ Blockchain identity management solves these issues.
 It was this gap in technology that prevented digital currencies from being created or adopted in the past. Blockchain fills the gap for currencies, but it also fills the gap for decentralized identity systems, opening up a whole new world of possibilities for data ownership.
 
 Your Blockchain-Based Digital Identity
-At least 1 billion people worldwide are unable to claim ownership over their identities. This is one of the huge drawbacks of physical identity documentation. It’s not widely available in every country. This leaves 1/7th of the entire planet unable to vote, open a bank account, or, in some cases, find a job. 
+At least 1 billion people worldwide are unable to claim ownership over their identities. This is one of the huge drawbacks of physical identity documentation. It's not widely available in every country. This leaves 1/7th of the entire planet unable to vote, open a bank account, or, in some cases, find a job. 
 
 Our current identity management systems are unfair and outdated, but there is a blockchain ID solution: a decentralized identity system that will revolutionize digital freedom. This is more critical now than ever before, with centralized companies left, right and center hoping to create the metaverse.
 
@@ -62,11 +62,11 @@ Your unique digital identity.
 
 Imagine being able to verify your education qualifications or your date of birth without needing to actually show them. For example, a university degree could theoretically be on the blockchain and you could certify the credentials by checking the university or other issuing authority. 
 
-Similarly, you wouldn’t have to show your physical ID to verify your date of birth. The authority that wants to know your age could instead use decentralized identifiers and verifiable credentials to find out if you’re of the required age or not.
+Similarly, you wouldn't have to show your physical ID to verify your date of birth. The authority that wants to know your age could instead use decentralized identifiers and verifiable credentials to find out if you're of the required age or not.
 
 Authorization can be conducted in a trustless manner in which the digital identity in question is verified by an external source, and the person or organization checking can in turn verify the integrity of said source. 
 
-The verification of a proof is established by the verifier’s judgment of the trustworthiness of the testimony.
+The verification of a proof is established by the verifier's judgment of the trustworthiness of the testimony.
 
 This is known as a zero-knowledge proof.
 
@@ -79,34 +79,34 @@ Blockchain identity solutions, such as Elastos DIDs, integrate state-of-the-art 
 
 All of the following have poor identity management and could do with being brought up to date.
 
-Government
-Healthcare
-Education
-Banking
-Business
-There are tons more that could be added to this list, but broadly speaking, these five categories are crucial to society as we know it. By incorporating decentralized identifiers into these fields, we can minimize bureaucracy-related inefficiencies, protect data privacy and let users own their own data.
+% Government
+% Healthcare
+% Education
+% Banking
+% Business
+% There are tons more that could be added to this list, but broadly speaking, these five categories are crucial to society as we know it. By incorporating decentralized identifiers into these fields, we can minimize bureaucracy-related inefficiencies, protect data privacy and let users own their own data.
 
-In DeFi (decentralized finance), for example, imagine being able to take out a loan without collateral. It sounds absurd right now. To take out loans from a bank, we need to provide a credit rating to show that we can be trusted to pay it back. By owning our own data through a decentralized identity, we can port our credit score onto the blockchain.
+% In DeFi (decentralized finance), for example, imagine being able to take out a loan without collateral. It sounds absurd right now. To take out loans from a bank, we need to provide a credit rating to show that we can be trusted to pay it back. By owning our own data through a decentralized identity, we can port our credit score onto the blockchain.
 
-Effectively, we can use verifiable credentials to prove our trust and take out a loan on the blockchain without needing to deposit any collateral. CreDA, a credit oracle founded by Feng Han, the co-founder of Elastos, is currently working towards this goal. By combining the power of Elastos DIDs with a unique NFT (non-fungible token) concept, CreDA will enable you to mint your data as an NFT. 
+% Effectively, we can use verifiable credentials to prove our trust and take out a loan on the blockchain without needing to deposit any collateral. CreDA, a credit oracle founded by Feng Han, the co-founder of Elastos, is currently working towards this goal. By combining the power of Elastos DIDs with a unique NFT (non-fungible token) concept, CreDA will enable you to mint your data as an NFT. 
 
-Learn more about this groundbreaking innovation here. 
+% Learn more about this groundbreaking innovation here. 
 
-Decentralized Identifiers: 3 Reasons To Avoid Putting Personal Data Directly on the Blockchain
-While DIDs enable you to control your data, it’s important to note that, for security reasons, it’s best to not actually put sensitive data directly onto the blockchain. This is why we have zero-knowledge proofs to verify credentials. 
+% Decentralized Identifiers: 3 Reasons To Avoid Putting Personal Data Directly on the Blockchain
+% While DIDs enable you to control your data, it's important to note that, for security reasons, it's best to not actually put sensitive data directly onto the blockchain. This is why we have zero-knowledge proofs to verify credentials. 
 
-The 3 Main Benefits of Having a Decentralized Digital Identity
-1. Accessibility
-As mentioned earlier, a large portion of the world lives without physical identities, let alone digital identities. By utilizing the power of a distributed ledger, a decentralized identity becomes available to everybody. Your data is yours to claim for yourself.
+% The 3 Main Benefits of Having a Decentralized Digital Identity
+% 1. Accessibility
+% As mentioned earlier, a large portion of the world lives without physical identities, let alone digital identities. By utilizing the power of a distributed ledger, a decentralized identity becomes available to everybody. Your data is yours to claim for yourself.
 
-2. Data Security And Protection
-Current centralization makes the storing of personal data dangerous. It’s highly likely to be leaked or hacked at some point. With a decentralized identity, you own your data as digital property. Its value is determined by you and you alone. 
+% 2. Data Security And Protection
+% Current centralization makes the storing of personal data dangerous. It's highly likely to be leaked or hacked at some point. With a decentralized identity, you own your data as digital property. Its value is determined by you and you alone. 
 
-It will also be secured by a private key, just like your cryptocurrencies. This means that the process of verification or authentication is only possible if you know the key. Not only does this increase security, it helps you control your data. Check out data security tips here.
+% It will also be secured by a private key, just like your cryptocurrencies. This means that the process of verification or authentication is only possible if you know the key. Not only does this increase security, it helps you control your data. Check out data security tips here.
 
-3. Superior User Experience
-With one universal login—using the verifiable credentials on your digital identity—you can access the entire web without needing to create new accounts and remember hundreds of passwords. One day, we’ll look back on the amount of accounts and passwords we were required to have for authentication and laugh like we do at dial-up broadband and the sheer size of 80s computers.
-( https://elastos.info/decentralized-identity-dids/ )
+% 3. Superior User Experience
+% With one universal login—using the verifiable credentials on your digital identity—you can access the entire web without needing to create new accounts and remember hundreds of passwords. One day, we'll look back on the amount of accounts and passwords we were required to have for authentication and laugh like we do at dial-up broadband and the sheer size of 80s computers.
+% ( https://elastos.info/decentralized-identity-dids/ )
  
 \section{Problem statement}
  
